--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dmrrnno8f/image/upload/v1705006464/my%20portfolio%20website/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mofeleng Shadow Mokgope: Fullstack web developer</title>
   </head>
