Added open graph tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dmrrnno8f/image/upload/v1705006464/my%20portfolio%20website/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- HTML Meta Tags -->
     <title>Mofeleng Shadow Mokgope: Fullstack web developer</title>
+   
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://mofelengdev.co.za">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Mofeleng Shadow Mokgope: Fullstack web developer">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/documents/1c7cc4c7-43ef-44b9-bebc-2da4501c49de.png?token=wNiTc8CsZOE7QyZbJkBsrIn9tv24xhwLA88_XBWnduY&height=580&width=1080&expires=33241173145">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="mofelengdev.co.za">
+    <meta property="twitter:url" content="https://mofelengdev.co.za">
+    <meta name="twitter:title" content="Mofeleng Shadow Mokgope: Fullstack web developer">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/documents/1c7cc4c7-43ef-44b9-bebc-2da4501c49de.png?token=wNiTc8CsZOE7QyZbJkBsrIn9tv24xhwLA88_XBWnduY&height=580&width=1080&expires=33241173145">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
